@@ -1,7 +1,8 @@
 [
 	{
-		"CommandType": "SetFPS",
-		"Value": 30.0
+		"CommandType": "SetSceneProperties",
+		"FrameRate": 30.0,
+		"StatusBarVisibility": "visible"
 	},
 	{
 		"CanvasId": "Canvas-0",
